@@ -84,6 +84,8 @@ EOF
     ProxyPassReverse $PROTO://$CONFIG_APACHE_TCP_ADDR:$PORT/$OMD_SITE
   </Location>
 </IfModule>
+
+IncludeOptional $OMD_ROOT/etc/apache/*.include
 EOF
         if [ "$PORT" != "$2" ] ; then
             echo "Apache port $2 is in use. I've choosen $PORT instead." >&2
