@@ -1,0 +1,61 @@
+#!/bin/bash
+
+# Alias: URL Alias
+# Menu: Web GUI
+# Description:
+#  Configure a URL alias which can be used instead of the
+#  site name.
+#  After changing this variable, the main Apache webserver
+#  must be restarted.
+
+case "$1" in
+    default)
+        echo ""
+    ;;
+        choices)
+        echo "([a-zA-Z0-9-]+)"
+    ;;
+    set)
+        ALIAS=$2
+        cat <<EOF > $OMD_ROOT/etc/apache/alias.include
+# This file is managed by 'omd config set WEB_ALIAS'.
+# Better do not edit manually
+EOF
+        if [ ! -z $ALIAS ]; then
+            cat <<EOF >> $OMD_ROOT/etc/apache/alias.include
+#RewriteEngine on
+#RewriteCond %{REQUEST_METHOD} GET
+#RewriteRule ^/$OMD_SITE(.*) /$ALIAS\$1 [R=permanent,L,NE]
+#RewriteRule ^/$ALIAS(.*) /$OMD_SITE\$1 [PT,L,NE]
+#Alias /$OMD_SITE "$OMD_ROOT/var/www"
+#<Directory "$OMD_ROOT/var/www">
+#    Options +SymLinksIfOwnerMatch
+#    AllowOverride All
+#    Order deny,allow
+#    Allow from all
+#</Directory>
+
+
+RewriteEngine on
+RewriteCond %{REQUEST_METHOD} GET
+RewriteRule ^/$OMD_SITE(.*) /$ALIAS\$1 [R=permanent,L,NE]
+
+<IfModule mod_proxy_http.c>
+
+  <Location /$ALIAS>
+    # Setting "retry=0" to prevent 60 second caching of problem states e.g. when
+    # the site apache is down and someone tries to access the page.
+    # "disablereuse=On" prevents the apache from keeping the connection which leads to
+    # wrong devlivered pages sometimes
+    ProxyPass https://127.0.0.1:5000/$OMD_SITE retry=0 disablereuse=On
+    ProxyPassReverse https://127.0.0.1:5000/$OMD_SITE
+  </Location>
+</IfModule>
+EOF
+        fi
+    ;;
+    depends)
+        [ "$CONFIG_APACHE_MODE" != "none" ]
+    ;;
+esac
+
