@@ -5,6 +5,8 @@ next:
             - add SELinux support for centos/rhel and fedora
             - add build support for Ubuntu 18.04 Bionic
             - add build support for Fedora 28
+            - add WEB_ALIAS hook to define an url alias
+            - add WEB_REDIRECT hook to enable redirect from / to /sitename
           - Naemon update to 1.0.8
           - InfluxDB: update to 1.5.4
             - add INFLUXDB_MODE hook to support ssl
